# Opioid_Abuse_Predictor

./: .gitignore  Clinical_Measurements_For_Cohort_Dataset.ipynb  Conditions Features.ipynb  Dictionary of features and codes.xlsx  Dictionary_Of_Features_And_Research_All_Of_Us_Codes.csv  Duplicate of Generate_The_Feature_Matrix.ipynb  Generate_Conditions_Feature_Matrix.ipynb  Generate_Data_Frame_With_Questions_Relating_To_Cancer.ipynb  Generate_Feature_Matrix.ipynb  Generate_The_Feature_Matrix.ipynb  Hello World .ipynb  Instructions_To_Set_Up_Cloud_Analysis_Environment.md  Medications_For_Cohort_Dataset.ipynb  Opioid_Abuse_Predictor.ipynb  Opioid_Data--US_Department_Of_Veterans_Affairs.xlsx  Procedures_For_Cohort_Dataset.ipynb  README.md  Sandbox.ipynb  Sanity_Check_on_Undersample.ipynb  To-Dos_For_Developing_Opioid-Abuse_Predictor.docx  To-Dos_For_Developing_Opioid-Abuse_Predictor.md  Understanding_Workbench.ipynb  pyproject.toml  resolving_discrepancy_with_num_opioid_abusers.ipynb  savenotebooktogooglebucket.py  sql_query_medications.rtf  standard_concept_names_for_cohort.csv
Literature_Review/: Importance_Of_Papers_To_Opioid_Abuse_Predictor.txt
Reference/: All_Of_Us_Controlled_Tier_Dataset_v7_CDR_Data_Dictionary.xlsx  Instructions_To_Set_Up_Cloud_Analysis_Environment.md  Opioid_Data--US_Department_Of_Veterans_Affairs.xlsx
System_Analysis/: Dealing_With_Data_Sparsity.md  Implementation_Diagram.drawio  Interface_Design--Requester_And_Opioid-Abuse_Binary_Classifier.csv  Interface_Design--Requester_And_Opioid-Abuse_Binary_Classifier.xlsx  System_Description.docx  (+9 more)
(+17 files in other folders)
